kubernetes/exemplo 6/k8s/hom/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: react-orange-service
  namespace: homolog

spec:
  selector:
    app: react-orange

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
