kubernetes/exemplo 6/k8s/hom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: react-ingress
  namespace: homolog

spec:
  ingressClassName: traefik

  rules:
    - host: homolog.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: react-orange-service

                port:
                  number: 80
